# docimprint-sdk

./: .gitignore  LICENSE  README.md  VERIFY_TEST.md  glama.json  package-lock.json  package.json  server.json  smithery.yaml
.github/: GITHUB_SETUP.md
python/: LICENSE  README.md  pyproject.toml
python/docimprint/: __init__.py  client.py  errors.py  ids.py  types.py
python/docimprint/crewai/: __init__.py  base.py  formatters.py  knowledge.py  toolkit.py  tracking.py
python/docimprint/crewai/tools/: __init__.py  claims.py  collections.py  extract.py  verify.py
python/tests/: conftest.py  test_client.py  test_client_provenance.py  test_client_security.py  test_knowledge.py  test_tools.py  test_tracking.py
python/tests/integration/: test_live.py
src/: client.ts  errors.ts  index.ts  types.ts
