[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docimprint"
version = "0.1.1"
description = "Python client and CrewAI integration for DocImprint verifiable document memory"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "DocImprint" }]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.0",
]

[project.optional-dependencies]
crewai = ["crewai>=0.80; python_version<'3.14'"]
dev = ["pytest>=8.0", "pytest-httpx>=0.30", "respx>=0.21"]

[project.urls]
Homepage = "https://docimprint.com"
Documentation = "https://docimprint.com/docs"
Repository = "https://github.com/sawftware-apps/docimprint-sdk"

[tool.hatch.build.targets.wheel]
packages = ["docimprint"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
